--- a/Makefile.Vx
+++ b/Makefile.Vx
@@ -1,5 +1,16 @@
+#*************************************************************************
+# Copyright (c) 2002 The University of Chicago, as Operator of Argonne
+# National Laboratory.
+# Copyright (c) 2002 The Regents of the University of California, as
+# Operator of Los Alamos National Laboratory.
+# This file is distributed subject to a Software License Agreement found
+# in the file LICENSE that is included with this distribution. 
+#*************************************************************************
 # Makefile for SDDS Epics
 # $Log$
+# Revision 1.2  2002/08/02 15:38:42  jba
+# Added license information.
+#
 # Revision 1.1  2002/03/11 20:02:40  soliday
 # First version.
 #
